--- a/src/lib/config/config.ini
+++ b/src/lib/config/config.ini
@@ -1,7 +1,7 @@
 [APPLICATION]
 name = Time Lapse
 version = 1.0.0
-author = ? Bruno DELATTRE
+author = © Bruno DELATTRE
 
 [ACQUISITION]
 trigger = 5
@@ -27,13 +27,13 @@ framerate = 30
 rotation = 0
 brightness = 0
 contrast = 0
-image_effect =
+image_effect = 
 exposure_mode = auto
 meter_mode = average
 awb = auto
 picture_path = pictures/
 delay = 3
-nb = 7200
+nb = 3600
 
 [GPIO]
 led_acquisition = 23
