--- a/src/lib/config/config.ini
+++ b/src/lib/config/config.ini
@@ -1,7 +1,8 @@
 [APPLICATION]
 name = Time Lapse
 version = 1.0.0
-author = © Bruno DELATTRE
+author = c Bruno DELATTRE
+splashduration = 5
 
 [ACQUISITION]
 trigger = 5
@@ -11,12 +12,6 @@ levelconsole = 10
 levelfile = 20
 logfile = log
 logfilesize = 1000000
-
-[EXPORT]
-directoryimage = pictures
-
-[SQLITE]
-database = database.db
 
 [CAMERA]
 pic_resolution_x = 2592
@@ -32,10 +27,17 @@ exposure_mode = auto
 meter_mode = average
 awb = auto
 picture_path = pictures/
-delay = 3
-nb = 3600
+delay = 10
+nb = 1080
 
 [GPIO]
-led_acquisition = 23
-input_acquisition = 27
+led_acquisition = 22
+start_acquisition = 17
+stop_acquisition = 27
+
+[EXPORT]
+directoryimage = pictures
+
+[SQLITE]
+database = database.db
 
