--- a/src/lib/config/config.ini
+++ b/src/lib/config/config.ini
@@ -1,6 +1,6 @@
 [APPLICATION]
-name = Time Lapse
-version = 1.0.0
+name = Time-Lapse
+version = 1.3.1
 author = c Bruno DELATTRE
 splashduration = 5
 
@@ -8,32 +8,33 @@ splashduration = 5
 trigger = 5
 
 [LOGGER]
-levelconsole = 10
+levelconsole = 20
 levelfile = 20
 logfile = log
 logfilesize = 1000000
 
 [CAMERA]
+iso = 100
 pic_resolution_x = 2592
 pic_resolution_y = 1944
 vid_resolution_x = 1920
 vid_resolution_y = 1080
 framerate = 30
-rotation = 0
-brightness = 0
+rotation = 180
+brightness = 50
 contrast = 0
+raw =
+jpegquality = 100
 image_effect = 
 exposure_mode = auto
 meter_mode = average
 awb = auto
 picture_path = pictures/
-delay = 10
-nb = 1080
 
 [GPIO]
-led_acquisition = 22
-start_acquisition = 17
-stop_acquisition = 27
+led_acquisition = 17
+config_acquisition = 27
+start_acquisition = 22
 
 [EXPORT]
 directoryimage = pictures
